infrastructure/kubernetes/base/user/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api
  labels:
    app.kubernetes.io/name: user-api
spec:
  ingressClassName: nginx
  rules:
    - host: cloudgames.local
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 8080
